update the Binary tree stage 1